Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-50467

[REG 5.5.1 -> 5.6] Shortcuts using Alt key broken on Ubuntu 15.10

XMLWordPrintable

      1. Open the demo project from QTBUG-50360.
      2. In line 29 of ShortcutTest.cpp, add a key sequence that uses the Alt key, e.g. "Alt+G".
      3. Build and run this on Qt 5.5.1.
      4. Press the shortcut.
        You'll see output like: QKeySequence("Alt+G")
      5. Build and run this on Qt 5.6.
      6. Press the shortcut.
        You won't see such output.

      Qt 5.6 should still be able to handle shortcuts using the Alt key.

        For Gerrit Dashboard: QTBUG-50467
        # Subject Branch Project Status CR V

            vestbo Tor Arne Vestbø
            rlohning Robert Löhning
            Votes:
            2 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes